Fixed footer covering text on index when reactive design shrinks

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ footer p {
 
 #about-me-img {
     float: left;
-    margin-right: 2%;
+    margin-right: 3%;
 }
 
 .portfolio-display {
